--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
               <a href="#menu" class="nav-link">Our Menu</a>
             </li>
 
+            <li class="nav-item">
+              <a class="nav-link" href="signup.html">Signup</a>
+            </li>
+  
+
            
 
           </ul>
